--- a/src/styles.css
+++ b/src/styles.css
@@ -270,31 +270,32 @@ a:visited {
 }
 
 .hero {
-  width: 100vw;
-  height: 100vh;
-  color: white;
-  text-align: left;
-  padding: 3rem;
-  flex-direction: column;
+  width: 99vw;
+  height: 50vh;
   background-image: url("src/assets/pexels-pixabay-289560.jpg");
-  background-size: 100vw 100vh;
+  background-size: 100vw;
+  color: white;
 }
-.hero .inner-text {
-  width: auto;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 1.5rem;
-  color: black;
-  background: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+.hero .text {
+  max-width: 40vw;
+  margin-left: 10vw;
+  padding-top: 2.5vw;
 }
-.hero .inner-text p {
-  padding: 1rem 0;
+.hero .text .text--xxxl {
+  font-size: 5rem;
+  font-family: serif;
+}
+.hero .text p {
+  padding-bottom: 2rem;
+}
+
+.gallery {
+  margin: 10vh 5vw;
+}
+.gallery .gallery-image {
+  max-width: 25vw;
+  margin: 2vw;
+  border-radius: 2vw;
 }
 
 /*# sourceMappingURL=styles.css.map */
