--- a/src/sass/components/_cta-button.scss
+++ b/src/sass/components/_cta-button.scss
@@ -1,3 +1,12 @@
 .cta-button {
-    background-color: var(--)
+  transition-duration: 0.4s;
+  background-color: $gray-4;
+  border: 2px solid $gray-10;
+  color: black;
+  padding: 1rem;
+  border-radius: 1vh;
+  &:hover {
+    color: white;
+    background-color: $gray-10;
+  }
 }
