feat(Homepage): Completed preliminary home page

--- a/src/sass/components/_cta-button.scss
+++ b/src/sass/components/_cta-button.scss
@@ -5,6 +5,7 @@
   color: black;
   padding: 1rem;
   border-radius: 1vh;
+  cursor: pointer;
   &:hover {
     color: white;
     background-color: $gray-10;
