--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -11,8 +11,9 @@ footer {
     .contact-info,
     .social-media,
     .newsletter {
-      flex-basis: 30%;
-      max-width: 300px;
+      flex-basis: 100%;
+      max-width: 100%;
+      margin-bottom: 30px;
       h3 {
         color: $gray-4;
         font-size: $text-xl;
@@ -78,6 +79,15 @@ footer {
             color: $color-background;
           }
         }
+      }
+    }
+    @media screen and (min-width: 768px) {
+      .contact-info,
+      .social-media,
+      .newsletter {
+        flex-basis: 30%;
+        max-width: 30%;
+        margin-bottom: 0;
       }
     }
   }
