--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -1,14 +1,89 @@
-.navbar {
+nav {
   display: flex;
   justify-content: space-between;
-  #logo {
-    font-family: serif;
+  align-items: center;
+  height: 80px;
+  background-color: $gray-9;
+  padding: 0 20px;
+
+  .navbar-logo {
+    color: $color-background;
+    font-size: $text-xl;
   }
-  .socials {
+
+  .navbar-links {
     display: flex;
-    svg {
-      margin: auto 0.2rem;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      margin: 0 10px;
+
+      a {
+        color: $color-background;
+        text-decoration: none;
+        font-size: $text-md;
+      }
     }
   }
-  margin: 1rem;
+
+  .navbar-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    a {
+      color: $color-background;
+      font-size: $text-lg;
+      margin: 0 10px;
+    }
+  }
+
+  .navbar-cta {
+    color: $color-background;
+    background-color: $color-primary;
+    border: none;
+    padding: 10px 20px;
+    font-size: $text-md;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-left: 20px;
+
+    &:hover {
+      background-color: $color-primary-dark;
+    }
+  }
+
+  .navbar-toggle {
+    display: none;
+    color: #fff;
+    font-size: $text-lg;
+  }
+}
+
+@media (max-width: 768px) {
+  nav .navbar-links {
+    display: none;
+  }
+
+  nav .navbar-toggle {
+    display: block;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  nav.responsive .navbar-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+
+    li {
+      margin: 10px 0;
+    }
+  }
 }
