--- a/src/styles.css
+++ b/src/styles.css
@@ -324,6 +324,7 @@ a:visited {
   color: black;
   padding: 1rem;
   border-radius: 1vh;
+  cursor: pointer;
 }
 .cta-button:hover {
   color: white;
@@ -422,8 +423,9 @@ footer .container {
 footer .container .contact-info,
 footer .container .social-media,
 footer .container .newsletter {
-  flex-basis: 30%;
-  max-width: 300px;
+  flex-basis: 100%;
+  max-width: 100%;
+  margin-bottom: 30px;
 }
 footer .container .contact-info h3,
 footer .container .social-media h3,
@@ -478,24 +480,96 @@ footer .container .newsletter form button:hover {
   background-color: #6750a4;
   color: #fffbfe;
 }
+@media screen and (min-width: 768px) {
+  footer .container .contact-info,
+  footer .container .social-media,
+  footer .container .newsletter {
+    flex-basis: 30%;
+    max-width: 30%;
+    margin-bottom: 0;
+  }
+}
 footer .fa {
   font-size: 20px;
   margin-right: 10px;
 }
 
-.navbar {
+nav {
   display: flex;
   justify-content: space-between;
-  margin: 1rem;
+  align-items: center;
+  height: 80px;
+  background-color: #464447;
+  padding: 0 20px;
 }
-.navbar #logo {
-  font-family: serif;
+nav .navbar-logo {
+  color: #fffbfe;
+  font-size: 1.728em;
 }
-.navbar .socials {
+nav .navbar-links {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-.navbar .socials svg {
-  margin: auto 0.2rem;
+nav .navbar-links li {
+  margin: 0 10px;
+}
+nav .navbar-links li a {
+  color: #fffbfe;
+  text-decoration: none;
+  font-size: 1.2em;
+}
+nav .navbar-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav .navbar-social a {
+  color: #fffbfe;
+  font-size: 1.44em;
+  margin: 0 10px;
+}
+nav .navbar-cta {
+  color: #fffbfe;
+  background-color: #6750a4;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1.2em;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-left: 20px;
+}
+nav .navbar-cta:hover {
+  background-color: #21005d;
+}
+nav .navbar-toggle {
+  display: none;
+  color: #fff;
+  font-size: 1.44em;
+}
+
+@media (max-width: 768px) {
+  nav .navbar-links {
+    display: none;
+  }
+  nav .navbar-toggle {
+    display: block;
+  }
+  nav .navbar-toggle:hover {
+    cursor: pointer;
+  }
+  nav.responsive .navbar-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  nav.responsive .navbar-links li {
+    margin: 10px 0;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
