--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   width: 99vw;
   height: 50vh;
-  background-image: url("src/assets/Antique Door.png");
+  background-image: url("./mantiques/assets/Antique Door.png");
   background-size: cover;
   background-position: 50%;
   color: white;
