--- a/src/styles.css
+++ b/src/styles.css
@@ -346,7 +346,7 @@ a:visited {
 .hero {
   width: 99vw;
   height: 50vh;
-  background-image: url("src/assets/Antique Door.png");
+  background-image: url("../../assets/Antique Door.png");
   background-size: cover;
   background-position: 50%;
   color: white;
