feat: added products

--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -1,4 +1,5 @@
 @import "testimonials";
-@import "featuredItem";
 @import "cta-button";
 @import "about";
+@import "card-item";
+@import "product-tile.scss";
