--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -1,89 +1,92 @@
-nav {
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
+  height: 100%;
+}
+
+.navbar {
+  height: 60px;
   background-color: $gray-9;
-  padding: 0 20px;
+  position: relative;
+}
 
-  .navbar-logo {
-    color: $color-background;
-    font-size: $text-xl;
-  }
+.menu-icon {
+  display: none;
+  color: $color-background;
+}
 
-  .navbar-links {
+.logo {
+  color: $color-background;
+}
+
+.nav-elements {
+  ul {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    justify-content: space-between;
+    list-style-type: none;
 
-    li {
-      margin: 0 10px;
+    li:not(:last-child) {
+      margin-right: 60px;
+    }
 
-      a {
-        color: $color-background;
-        text-decoration: none;
-        font-size: $text-md;
+    a {
+      font-size: 16px;
+      font-weight: 400;
+      color: $color-background;
+      text-decoration: none;
+
+      &.active {
+        color: $color-primary-light;
+        font-weight: 500;
+        position: relative;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -4px;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background-color: $color-primary-light;
+        }
       }
     }
   }
-
-  .navbar-social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    a {
-      color: $color-background;
-      font-size: $text-lg;
-      margin: 0 10px;
-    }
-  }
-
-  .navbar-cta {
-    color: $color-background;
-    background-color: $color-primary;
-    border: none;
-    padding: 10px 20px;
-    font-size: $text-md;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-left: 20px;
-
-    &:hover {
-      background-color: $color-primary-dark;
-    }
-  }
-
-  .navbar-toggle {
-    display: none;
-    color: #fff;
-    font-size: $text-lg;
-  }
 }
 
-@media (max-width: 768px) {
-  nav .navbar-links {
-    display: none;
-  }
-
-  nav .navbar-toggle {
+@media (max-width: 600px) {
+  .menu-icon {
     display: block;
-
-    &:hover {
-      cursor: pointer;
-    }
+    cursor: pointer;
   }
-  nav.responsive .navbar-links {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
 
-    li {
-      margin: 10px 0;
+  .nav-elements {
+    position: absolute;
+    right: 0;
+    top: 60px;
+    background-color: $gray-9;
+    width: 0;
+    height: calc(100vh - 60px);
+    transition: all 0.3s ease-in;
+    overflow: hidden;
+
+    &.active {
+      width: 270px;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+
+      li {
+        margin-right: unset;
+        margin-top: 22px;
+        margin-left: 22px;
+      }
     }
   }
 }
